--- a/website.html
+++ b/website.html
@@ -10,11 +10,9 @@
 <h2>搜索 音乐 视频 图片 购物</h2>
 
 <p>搜索</p>
-<a href="http://www.baidu.com"> 百度</a>
-
 <p>
 图片链接：<a href = "http://www.baidu.com">
-<img src="C:\Users\magic\Documents\codes\images\baidu.jpg" width="100" height="50" />
+<img src="C:\Users\magic\Documents\codes\git\搜索引擎大全_files\baidu.png" width="100" height="50" />
 </a>
 </p>
 
@@ -25,8 +23,15 @@
 
 
 <br/>
-<a href="https://www.google.com/"> 谷歌</a>
+<p>
+图片链接：<a href="https://www.google.com/">
 <img src="C:\Users\magic\Documents\codes\git\搜索引擎大全_files\google.png" width="100" height="50" />
+</a>
+</p>
+<form action="https://www.google.com/" target="_blank">
+    <input id="kw" type ="text" name ="baidu" maxlength="255">
+    <button type="submit" value="提交" width="100" height="50">谷歌搜索</button>
+</form>
 <br/>
 
 <p>音乐</p>
