--- a/website.html
+++ b/website.html
@@ -10,18 +10,32 @@
 <h2>搜索 音乐 视频 图片 购物</h2>
 
 <p>搜索</p>
+<div class="sousuo">
+    <form action="http://www.baidu.com",target=_blank>  <!--action的值是URL，target可以取值_blank\_self等，规定在何处打开action URL-->
+     <div class="sousuo-tupian">
+         <a href="http://www.baidu.com",title="百度搜索">  <!--href的值是URL，title是一个全局属性，是tooltip显示的值-->
+           <img src="C:\Users\magic\Documents\codes\git\搜索引擎大全_files\baidu.png" width="100" height="50" />
+         </a>
+     </div>
+    <input type="text" class="sousuo-kuang" name="wd">
+    <button type="submit" class="sousuo-anniu">百度一下</button>
+    </form>
+</div>
+
+<!--
 <p>
 图片链接：<a href = "http://www.baidu.com">
 <img src="C:\Users\magic\Documents\codes\git\搜索引擎大全_files\baidu.png" width="100" height="50" />
 </a>
 </p>
 
+<div>
 <form action="http://www.baidu.com" target="_blank">
     <input id="kw" type ="text" name ="baidu" maxlength="255">
     <button type="submit" value="提交" width="100" height="50">百度一下</button>
 </form>
-
-
+</div>
+-->
 <br/>
 <p>
 图片链接：<a href="https://www.google.com/">
