--- a/test.html
+++ b/test.html
@@ -1,3 +1,33 @@
+<!doctype html>
+<html lang="zh">
+    <head>
+        <meta charset="utf-8">
+        <!--
+			<style>
+            div{outline:1px solid #f00;}
+            span{
+                outline:1px solid #000;
+                padding-top:10px;
+                padding-bottom: 10px;
+            }
+		</style>
+	-->
+    </head>
+    <body>
+        <div>
+			<form action="http://www.baidu.com/baidu",target=_blank> 
+				
+				 	<a href="http://www.baidu.com">  
+					  <img src="C:\Users\magic\Documents\codes\git\搜索引擎大全_files\baidu.png"/>
+					</a>			  
+				   <input type="text" class="sousuo-kuang" name="wd">			
+				 <button type="submit" class="sousuo-anniu">百度一下</button>			   
+			</form>
+        </div>
+    </body>
+</html>
+
+<!--百度首页
 <!DOCTYPR html>
 <html>
 	<head>
@@ -90,4 +120,4 @@
 	</div>
 	</body>
 </html>
- 
+ -->
