--- a/test.html
+++ b/test.html
@@ -1,30 +1,37 @@
-<!doctype html>
-<html lang="zh">
-    <head>
-        <meta charset="utf-8">
-        <!--
-			<style>
-            div{outline:1px solid #f00;}
-            span{
-                outline:1px solid #000;
-                padding-top:10px;
-                padding-bottom: 10px;
-            }
-		</style>
-	-->
-    </head>
-    <body>
-        <div>
-			<form action="http://www.baidu.com/baidu",target=_blank> 
-				
-				 	<a href="http://www.baidu.com">  
-					  <img src="C:\Users\magic\Documents\codes\git\搜索引擎大全_files\baidu.png"/>
-					</a>			  
-				   <input type="text" class="sousuo-kuang" name="wd">			
-				 <button type="submit" class="sousuo-anniu">百度一下</button>			   
-			</form>
-        </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+ 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    body{
+      background: pink;
+    }
+    .div1{
+      height: 2px;
+      background: red;
+    }
+    .margin{
+      width: 500px;
+      height: 500px;
+      background: #388ecb;;
+      border: 20px solid burlywood;
+      margin: 30px;
+      padding: 30px;
+	  text-align: center;
+    }
+  </style>
+</head>
+ 
+<body>
+  <div class="div1"></div>
+  <div class="margin">margin详解</div>
+  <div class="div1"></div>
+</body>
+ 
 </html>
 
 <!--百度首页
