--- a/new website.html
+++ b/new website.html
@@ -42,40 +42,63 @@
     <div>
         <input type="text" id="tishi" class="sousuokuang" placeholder="请输入您想查找的内容">
     </div>  
-
-   <script type="text/javascript">
-    var curIndex = 0;
-    //时间间隔(单位毫秒)，每秒钟显示一张，数组共有3张图片放在img文件夹下
-    var timeInterval = 10000;
-    
-                            //定义一个存放照片位置的数组，可以放任意个，在这里放3个
-    var arr = new Array();
-    arr[0] = "img/bying2.jpg";
-    arr[1] = "img/bying5.jpg";
-    arr[2] = "img/bying7.jpg";
-    arr[3] = "img/bying8.jpg";
-    arr[4] = "img/bying5.jpg";
-    setInterval(changeImg, timeInterval);
-    function changeImg() {
-    if (curIndex == arr.length - 1) {
-    curIndex = 0;
-    } else {
-    curIndex += 1;
-    }
-    
-                                      //设置body的背景图片
-    document.body.style.backgroundImage = "URL("+arr[curIndex]+")";  //显示对应的图片
-    }
-    </script>
    
+    <div class="center_photo">
+        <img alt="tupian" src="./img/bying1.jpg" id="img"/>
+        <div class="point" style="display:block;">
+            <ul>
+                <li id="p1" onmouseover="point(this)" onmouseout="leave()">
+                    <img src="./img/green.png" id="i1"/>
+                </li>
+                <li id="p2" onmouseover="point(this)" onmouseout="leave()">
+                        <img src="./img/white.png" id="i2"/>
+                    </li>
+                    <li id="p3" onmouseover="point(this)" onmouseout="leave()">
+                            <img src="./img/white.png" id="i3"/>
+                        </li>
+                        <li id="p4" onmouseover="point(this)" onmouseout="leave()">
+                                <img src="./img/white.png" id="i4"/>
+                            </li>
+                            <li id="p5" onmouseover="point(this)" onmouseout="leave()">
+                                    <img src="./img/white.png" id="i5"/>
+                                </li>
+            </ul>
+        </div>
+    </div>
+
+<style type="text/css">
+.center_photo{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+.point{
+    text-align: center;
+
+}
+.point ul li img{width: 20px;height: 20px;}
+.point ul li img:hover{cursor: pointer;}
+</style>
+
+<script type="text/javascript">
+var min=1, max=5;
+var imgList = new Array();
+imgList[0]="./img/bying1.jpg";
+imgList[1]="./img/bying2.jpg";
+imgList[2]="./img/bying3.jpg";
+imgList[3]="./img/bying4.jpg";
+imgList[4]="./img/bying5.jpg";
+
+var li_imgList = new Array();
+li_imgList[0]="i1";
+li_imgList[1]="i2";
+li_imgList[2]="i3";
+li_imgList[3]="i4";
+li_imgList[4]="i5";
+
+
+</script>
+
  </body>
 </html>  
-<!--
-    1、导航栏和页面下方li元素，使鼠标点击字周围区域也可跳转；
-    2、下方引擎“简”图标和文字不够平齐；
-    3、页面顶部做一个可以动态切换的图片；
-    4、页面配色重新配置；
-    5、背景图片可以切换，参考Biying；
-    6、上面一个输入框，下面多个图标，点击跳转到搜索结果；
-    7、无聊的时候，给用户提供可浏览内容；
--->
