--- a/new website.html
+++ b/new website.html
@@ -9,8 +9,7 @@
       margin: 0;
       padding: 0;
       
-      background-image: url("./img/bying1.jpg");  /*照片文件和代码同级，只要一个.就够了，上一级用..。MAC上用后斜杠，Windows上用前斜杠*/
-      /*background-color: rgb(104, 157, 170);*/
+      background-image: url("./img/bying1.jpg"); 
     }
 
   h1{
@@ -47,7 +46,7 @@
                         text-align: center;
                     }
                 </style>          
-
+<!--
    <script type="text/javascript">
     var curIndex = 0;
     //时间间隔(单位毫秒)，每秒钟显示一张，数组共有3张图片放在img文件夹下
@@ -71,6 +70,6 @@
     document.body.style.backgroundImage = "URL("+arr[curIndex]+")";  //显示对应的图片
     }
     </script>
-   
+  //--> 
  </body>
 </html>  
