--- a/test.html
+++ b/test.html
@@ -6,30 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    body{
-      background: pink;
-    }
-    .div1{
-      height: 2px;
-      background: red;
-    }
-    .margin{
-      width: 500px;
-      height: 500px;
-      background: #388ecb;;
-      border: 20px solid burlywood;
-      margin: 30px;
-      padding: 30px;
-	  text-align: center;
-    }
-  </style>
+
 </head>
  
 <body>
-  <div class="div1"></div>
-  <div class="margin">margin详解</div>
-  <div class="div1"></div>
+<form action="http://www.baidu.com/baidu" target=_blank> 
+
+ <input type="text" class="sousuo-kuang" name="wd">	
+ 
+</form> 
 </body>
  
 </html>
