--- a/website 2.html
+++ b/website 2.html
@@ -33,10 +33,10 @@
       <a title="电影" href="https://www.12345good.com/dianying.shtml" target="_blank">  
         <img src="C:\Users\magic\Documents\codes\git\img\movie.png" width="35" height="35"/>
       </a>  
-      <a title="新闻" href="https://www.12345good.com/news.shtml" target="_blank">  
+      <a title="新闻" href="https://www.12345good.com/xinwen.shtml" target="_blank">  
         <img src="C:\Users\magic\Documents\codes\git\img\news.png" width="35" height="35"/>
       </a> 
-      <a title="图片" href="https://www.12345good.com/picture.shtml" target="_blank">  
+      <a title="图片" href="http://image.baidu.com/" target="_blank">  
         <img src="C:\Users\magic\Documents\codes\git\img\picture.png" width="35" height="35"/>
       </a>  
       <a title="购物" href="https://www.12345good.com/gouwu.shtml" target="_blank">  
