--- a/website 1.html
+++ b/website 1.html
@@ -98,7 +98,7 @@ li{
                     <form action="http://www.baidu.com/baidu" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="百度一下" href="http://www.baidu.com" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\baidu.png"/>
+                              <img src="img\baidu.png"/>
                             </a>	
                         </div>	
                         <div>  
@@ -111,7 +111,7 @@ li{
             <form action="https://www.google.com/search" target=_blank>
                 <div class="sousuo-tupian">
                      <a title="谷歌搜索" href="https://www.google.com/" target="_blank">
-                     <img src="C:\Users\magic\Documents\codes\git\img\google.png"/>
+                     <img src="img\google.png"/>
                      </a>
                 </div>
                 <div> 
@@ -125,7 +125,7 @@ li{
             <form action="http://www.so.com/s" target=_blank>  
                 <div class="sousuo-tupian">
                          <a title="360搜索" href="https://www.so.com/" target="_blank"> 
-                           <img src="C:\Users\magic\Documents\codes\git\img\360.png" />
+                           <img src="img\360.png" />
                          </a>
                 </div>  
                 <div>     
@@ -138,7 +138,7 @@ li{
                     <form action="https://www.sogou.com/web" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="搜狗搜索"href="https://www.sogou.com/" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\sougou.png"/>
+                              <img src="img\sougou.png"/>
                             </a>	
                         </div>	
                         <div> 	  
@@ -151,7 +151,7 @@ li{
                     <form action="https://www.bing.com/search" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="Bing搜索" href="https://www.bing.com/?mkt=zh-CN" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\bing.png"/>
+                              <img src="img\bing.png"/>
                             </a>
                         </div>
                         <div> 	  
@@ -165,7 +165,7 @@ li{
                     <form action="https://search.yahoo.com/search" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="雅虎搜索" href="https://search.yahoo.com/" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\yahoo.png"/>
+                              <img src="img\yahoo.png"/>
                             </a>
                         </div>
                         <div> 	  
@@ -179,7 +179,7 @@ li{
                     <form action="https://s.taobao.com/search" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="淘宝搜索" href="https://s.taobao.com/" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\taobao.jpg"/>
+                              <img src="img\taobao.jpg"/>
                             </a>
                         </div>	
                         <div> 		  
@@ -192,7 +192,7 @@ li{
                     <form action="https://list.tmall.com/search_product.htm" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="天猫搜索" href="https://www.tmall.com" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\tianmao.png"/>
+                              <img src="img\tianmao.png"/>
                             </a>
                         </div>	
                         <div> 		  
@@ -201,26 +201,12 @@ li{
                         </div>				   
                     </form> 
                 </div>
-  <!--          
-                <div class="sousuoyinqing">
-                    <form action="https://s.hc360.com" target=_blank> 
-                        <div class="sousuo-tupian">
-                             <a title="慧聪搜索" href="https://www.hc360.com/" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\huicong.png"/>
-                            </a>
-                        </div>		
-                        <div> 	  
-                           <input type="text" class="sousuo-kuang" name="w">			
-                         <button type="submit" class="sousuo-anniu">慧聪搜索</button>	
-                        </div>			   
-                    </form> 
-                </div>
--->  
+
                 <div class="sousuoyinqing">
                     <form action="https://search.jd.com/Search" target=_blank> 
                         <div class="sousuo-tupian">
                              <a title="京东搜索" href="https://corporate.jd.com/home" target="_blank">  
-                              <img src="C:\Users\magic\Documents\codes\git\img\jd.png"/>
+                              <img src="img\jd.png"/>
                             </a>
                         </div>		
                         <div> 	  
@@ -316,31 +302,31 @@ li{
                     <li>              
                     <a title="点击查看简介" 
                     href="https://baike.baidu.com/item/%E5%8D%83%E5%8D%83%E9%9F%B3%E4%B9%90/4251967?fr=aladdin" target="_blank">  
-                    <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                    <img src="img\jianjie.gif"/>
                     </a>
                     <a href="http://music.taihe.com/" target="_blank"> 千千音乐 </a></li>
 
                     <li><a title="点击查看简介" 
                     href="https://baike.baidu.com/item/QQ%E9%9F%B3%E4%B9%90/1157130?fr=aladdin" target="_blank">  
-                    <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                    <img src="img\jianjie.gif"/>
                     </a>
                     <a href="https://y.qq.com/" target="_blank"> QQ音乐 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/酷狗音乐/2710730?fr=aladdin" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="http://www.kugou.com/" target="_blank"> 酷狗音乐 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E9%85%B7%E6%88%91%E9%9F%B3%E4%B9%90%E7%9B%92/5277156?fromtitle=%E9%85%B7%E6%88%91%E9%9F%B3%E4%B9%90&fromid=1000110&fr=aladdin" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="http://www.kuwo.cn/" target="_blank"> 酷我音乐 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90/4453795?fr=aladdin" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="https://music.163.com/" target="_blank"> 网易云音乐 </a></li>
             </div>  
@@ -351,31 +337,31 @@ li{
 
                     <li><a title="点击查看简介" 
                     href="https://baike.baidu.com/item/360%E5%9B%BE%E7%89%87" target="_blank">  
-                    <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                    <img src="img\jianjie.gif"/>
                     </a>
                     <a href="https://image.so.com/" target="_blank"> 360图片 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E5%9B%BE%E7%89%87" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="http://image.baidu.com/" target="_blank"> 百度图片 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E6%87%92%E4%BA%BA%E5%9B%BE%E5%BA%93/6677989?fr=aladdin" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="http://www.lanrentuku.com/" target="_blank"> 懒人图库 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E8%8A%B1%E7%93%A3%E7%BD%91" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="https://huaban.com" target="_blank"> 花瓣网 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E6%91%84%E5%9B%BE%E7%BD%91" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="http://699pic.com/" target="_blank"> 摄图网 </a></li>
             </div>  
@@ -386,31 +372,31 @@ li{
 
                     <li><a title="点击查看简介" 
                     href="https://baike.baidu.com/item/%E7%99%BE%E5%BA%A6%E8%A7%86%E9%A2%91" target="_blank">  
-                    <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                    <img src="img\jianjie.gif"/>
                     </a>
                     <a href="http://v.baidu.com/" target="_blank"> 百度视频 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E7%88%B1%E5%A5%87%E8%89%BA/1523627" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="https://www.iqiyi.com/" target="_blank"> 爱奇艺 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E4%BC%98%E9%85%B7%E7%BD%91/10727008?fromtitle=%E4%BC%98%E9%85%B7&fromid=10981648&fr=aladdin" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="https://www.youku.com/" target="_blank"> 优酷 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E8%85%BE%E8%AE%AF%E8%A7%86%E9%A2%91" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="http://v.qq.com/" target="_blank"> 腾讯视频 </a></li>
 
                     <li><a title="点击查看简介" 
                         href="https://baike.baidu.com/item/%E8%8A%92%E6%9E%9CTV" target="_blank">  
-                        <img src="C:\Users\magic\Documents\codes\git\img\jianjie.gif"/>
+                        <img src="img\jianjie.gif"/>
                         </a>
                     <a href="https://www.mgtv.com/" target="_blank"> 芒果TV </a></li>
             </div>  
@@ -457,23 +443,7 @@ li{
                         cursor: pointer;
                         text-decoration: none;   /*text-decoration属性，规定添加到文本的装饰，下划线、上划线、删除线等*/
                         }
-/*
-                    .backtotop{
-                        width: 100px;
-                        height: 20px;
-                        float: right;
-                        margin-right: 55px;
-                      
-                        margin-bottom: 2px;
-                        cursor: pointer;
-                        border-style: solid;
-                        border-width: 2px;
-                        border-color: lightseagreen; 
-                    }
-                    .backtotop:hover{
-                        border-color: rgb(245, 114, 74);
-                    }
-/*border-color和border-width等属性使用时，要先加border-style属性来设置边框*/
+
                     #footer{
                     text-align: center;
                     min-height: 20px;
@@ -510,12 +480,3 @@ li{
    
  </body>
 </html>  
-<!--
-    1、导航栏和页面下方li元素，使鼠标点击字周围区域也可跳转；
-    2、下方引擎“简”图标和文字不够平齐；
-    3、页面顶部做一个可以动态切换的图片；
-    4、页面配色重新配置；
-    5、背景图片可以切换，参考Biying；
-    6、上面一个输入框，下面多个图标，点击跳转到搜索结果；
-    7、无聊的时候，给用户提供可浏览内容；
--->
