--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
     <div class="icon">      
       <a title="音乐" href="https://www.12345good.com/yinyue.shtml" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\music.png" width ="35" height="35"/>
+        <img src="img\music.png" width ="35" height="35"/>
       </a>      
       <a title="电影" href="https://www.12345good.com/dianying.shtml" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\movie.png" width="35" height="35"/>
+        <img src="img\movie.png" width="35" height="35"/>
       </a>  
       <a title="新闻" href="https://www.12345good.com/xinwen.shtml" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\news.png" width="35" height="35"/>
+        <img src="img\news.png" width="35" height="35"/>
       </a> 
       <a title="图片" href="http://image.baidu.com/" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\picture.png" width="35" height="35"/>
+        <img src="img\picture.png" width="35" height="35"/>
       </a>  
       <a title="购物" href="https://www.12345good.com/gouwu.shtml" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\shopping.png" width="35" height="35"/>
+        <img src="img\shopping.png" width="35" height="35"/>
       </a>
       <a title="美食" href="https://www.12345good.com/meishi.shtml" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\meishi.png" width="35" height="35"/>
+        <img src="img\meishi.png" width="35" height="35"/>
       </a>    
       <a title="新鲜事" href="http://top.baidu.com/buzz?b=1&c=513&fr=topbuzz_b342_c513" target="_blank">  
-        <img src="C:\Users\magic\Documents\codes\git\img\funny.png" width="35" height="35"/>
+        <img src="img\funny.png" width="35" height="35"/>
       </a>
     </div>
 
@@ -57,16 +57,16 @@
 
   <div class="tupian">
     <a onclick="clickEngine('google');">
-    <img title="谷歌搜索" target="_blank" src="C:\Users\magic\Documents\codes\git\img\google.png"/>
+    <img title="谷歌搜索" target="_blank" src="img\google.png"/>
     </a>
     <a onclick="clickEngine('sougou');">
-    <img title="搜狗搜索" target="_blank" src="C:\Users\magic\Documents\codes\git\img\sougou.png"/>
+    <img title="搜狗搜索" target="_blank" src="img\sougou.png"/>
     </a>
     <a onclick="clickEngine('360');">
-    <img title="360搜索" target="_blank" src="C:\Users\magic\Documents\codes\git\img\360.png"/>
+    <img title="360搜索" target="_blank" src="img\360.png"/>
     </a>
     <a onclick="clickEngine('tianmao');">
-      <img title="天猫购物" target="_blank" src="C:\Users\magic\Documents\codes\git\img\tianmao.png"/>
+      <img title="天猫购物" target="_blank" src="img\tianmao.png"/>
     </a>  
   </div>
 
