--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <link href="sou.ico" rel="icon" type="image/x-icon" />
-  <title>搜索引擎大全</title>
+  <title>搜索引擎大全-新版</title>
   <style type="text/css">
   body{
       margin: 0;
@@ -14,14 +14,23 @@
     color: white;
     text-align: center;
     margin-bottom: 0px;
-    margin-top: 20px;
-    
+    margin-top: 0px;    
+    }
+    .rukou{
+      text-align: right;      
+      margin-bottom: 0px;
+      margin-top: 10px;
+      margin-right: 10px;
     }
   </style>
  </head>
 
 <body>
-
+  <div class="rukou"> 
+    <a title="旧版入口" href="https://yanggeyang.github.io/mygit/website%201" target="_blank">  
+      <button class="rukou-anniu" type="button">旧版入口</button>
+    </a>
+  </div>
     <div class="header">
       <h1>搜索引擎大全</h1>
     </div>
@@ -128,6 +137,10 @@
   text-align: right;
   margin-bottom: 0;
   margin-right: 10px;
+  }
+  .icon img:hover{
+  background-color: pink; 
+  border-color: wheat;
   }
   .icon img{ 
   margin: 5px 5px;
