--- a/website 1.html
+++ b/website 1.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <link href="sou.ico" rel="icon" type="image/x-icon" />
-  <title>搜索引擎大全</title>
+  <title>搜索引擎大全-旧版</title>
   <style type="text/css">
   body{
       margin: 0;
@@ -412,16 +412,15 @@ li{
              <div id="footer">
                     Copyright © 2019 Yang Geyang
                     <br>
-                    <span id="poweredby"></span>powered by html and css on Windows10.</span>
-  
-            </div>
-<!--
-            <div class="backtotop">
-                    <a href="#top" target="_self">
-                        <img src="C:\Users\magic\Documents\codes\git\img\12345huidaodingbu.gif"/>
-                   </a>                 			   
-                </div>  
--->
+                    <!--<span id="poweredby"></span>powered by html and css on Windows10.
+                     </span> -->                   
+                     <div class="rukou">
+                        <a title="新版入口" href="https://yanggeyang.github.io/mygit/" target="_blank">  
+                         <button class="rukou-anniu" type="button">新版入口</button>
+                        </a>                			   
+                    </div>
+                    </div>
+           
 </div>
                     <style type="text/css">
                         .xiakuang{
@@ -451,6 +450,10 @@ li{
                     margin-bottom: 5px;
                     font: 15px bold;
                     }
+                .rukou{
+                    margin-top: 5px;
+                    margin-bottom: 0px;
+                }
                     </style>
 
    <script type="text/javascript">
