--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 
   <div class="tupian">
     <a onclick="clickEngine('google');">
-    <img title="谷歌搜索" target="_blank" src="img\google.png"/>
+    <img title="谷歌搜索" id="guge" target="_blank" src="img\google.png"/>
     </a>
     <a onclick="clickEngine('sougou');">
-    <img title="搜狗搜索" target="_blank" src="img\sougou.png"/>
+    <img title="搜狗搜索" id="sougou" target="_blank" src="img\sougou.png"/>
     </a>
     <a onclick="clickEngine('360');">
-    <img title="360搜索" target="_blank" src="img\360.png"/>
+    <img title="360搜索" id="360" target="_blank" src="img\360.png"/>
     </a>
     <a onclick="clickEngine('tianmao');">
-      <img title="天猫购物" target="_blank" src="img\tianmao.png"/>
+      <img title="天猫购物" id="tianmao" target="_blank" src="img\tianmao.png"/>
     </a>  
   </div>
 
