--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <div class="rukou"> 
-    <a title="旧版入口" href="https://yanggeyang.github.io/mygit/website%201" target="_blank">  
+    <a title="旧版入口" href="file:///C:/Users/magic/Documents/website%20codes/git/website%201.html" target="_blank">
       <button class="rukou-anniu" type="button">旧版入口</button>
     </a>
   </div>
@@ -37,31 +37,31 @@
 
     <div class="icon">      
       <a title="音乐" href="https://www.12345good.com/yinyue.shtml" target="_blank">  
-        <img src="img\music.png" width ="35" height="35"/>
+        <img src="img\music.png" id="music" width ="35" height="35"/>
       </a>      
       <a title="电影" href="https://www.12345good.com/dianying.shtml" target="_blank">  
-        <img src="img\movie.png" width="35" height="35"/>
+        <img src="img\movie.png" id="movie" width="35" height="35"/>
       </a>  
       <a title="新闻" href="https://www.12345good.com/xinwen.shtml" target="_blank">  
-        <img src="img\news.png" width="35" height="35"/>
+        <img src="img\news.png" id="news" width="35" height="35"/>
       </a> 
       <a title="图片" href="http://image.baidu.com/" target="_blank">  
-        <img src="img\picture.png" width="35" height="35"/>
+        <img src="img\picture.png" id="picture" width="35" height="35"/>
       </a>  
       <a title="购物" href="https://www.12345good.com/gouwu.shtml" target="_blank">  
-        <img src="img\shopping.png" width="35" height="35"/>
+        <img src="img\shopping.png" id="shopping" width="35" height="35"/>
       </a>
       <a title="美食" href="https://www.12345good.com/meishi.shtml" target="_blank">  
-        <img src="img\meishi.png" width="35" height="35"/>
+        <img src="img\meishi.png" id="meishi" width="35" height="35"/>
       </a>    
       <a title="新鲜事" href="http://top.baidu.com/buzz?b=1&c=513&fr=topbuzz_b342_c513" target="_blank">  
-        <img src="img\funny.png" width="35" height="35"/>
+        <img src="img\funny.png" id="funny" width="35" height="35"/>
       </a>
     </div>
 
   <div class="sousuokuang">
     <form action="http://www.baidu.com/baidu" target=_blank> 
-    <input type="text" class ="sousuo-kuang" name="wd" placeholder="请输入搜索关键词，回车可百度" ></form>  
+    <input type="text" class ="sousuo-kuang" id="kuang" name="wd" placeholder="请输入搜索关键词，回车可百度" ></form>
   </div>	
 
   <div class="tupian">
