--- a/website 1.html
+++ b/website 1.html
@@ -155,7 +155,7 @@ li{
                             </a>
                         </div>
                         <div> 	  
-                           <input type="text" class="sousuo-kuang" name="q">			
+                           <input type="text" class="sousuo-kuang" id="biying" name="q">
                          <button type="submit" class="sousuo-anniu">Bing搜索</button>	
                         </div>			   
                     </form>
@@ -415,7 +415,7 @@ li{
                     <!--<span id="poweredby"></span>powered by html and css on Windows10.
                      </span> -->                   
                      <div class="rukou">
-                        <a title="新版入口" href="https://yanggeyang.github.io/mygit/" target="_blank">  
+                        <a title="新版入口" href="file:///C:/Users/magic/Documents/website%20codes/git/index.html" target="_blank">
                          <button class="rukou-anniu" type="button">新版入口</button>
                         </a>                			   
                     </div>
