--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <div class="rukou"> 
-    <a title="旧版入口" href="file:///C:/Users/magic/Documents/website%20codes/git/website%201.html" target="_blank">
+    <a title="旧版入口" href="https://yanggeyang.github.io/mygit/website%201" target="_blank">
       <button class="rukou-anniu" type="button">旧版入口</button>
     </a>
   </div>
