--- a/website 1.html
+++ b/website 1.html
@@ -415,7 +415,7 @@ li{
                     <!--<span id="poweredby"></span>powered by html and css on Windows10.
                      </span> -->                   
                      <div class="rukou">
-                        <a title="新版入口" href="file:///C:/Users/magic/Documents/website%20codes/git/index.html" target="_blank">
+                        <a title="新版入口" href="https://yanggeyang.github.io/mygit/" target="_blank">
                          <button class="rukou-anniu" type="button">新版入口</button>
                         </a>                			   
                     </div>
